2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on NetBSD/sparc.
	* Makefile.devel (multibuild-netbsd-sparc): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For NetBSD/sparc, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on DragonFly/i386.
	None of the builds actually works for me: the kernel panics too often.
	* Makefile.devel (multibuild-dragonfly-i386): Enable all build variants
	that should work.
	* makemake.in (XCFLAGS): For DragonFly/i386, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on FreeBSD/arm64.
	* Makefile.devel (multibuild-freebsd-arm64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For FreeBSD/arm64, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix build failure on FreeBSD/arm64 and Solaris/SPARC64 with non-GCC
	compiler and NO_ADDRESS_SPACE_ASSUMPTIONS.
	* lispbibl.d: On FreeBSD/arm64 with clang and on Solaris/SPARC64 with
	cc, prefer GENERIC64B_HEAPCODES over GENERIC64C_HEAPCODES.
	(GENERIC64B_HEAPCODES_WORKS): Define accordingly.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Update set of working builds for Linux/s390x.
	* Makefile.devel (multibuild-linux-s390x): Don't depend on
	build-porting64-gcc-debug_gcsafety.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix crash of build-porting64-gcc-debug_gcsafety build on Linux/s390x.
	* makemake.in: When we already have -O0 in the $XCFLAGS, don't add -O1
	to a particular compilation command.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Update comments.
	* stream.d (clear_tty_input, finish_tty_output, clear_tty_output):
	Update comments after 2017-10-05 change.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	When testing, enable a couple of optimizations that are not risky.
	This avoids test failures with non-GCC compilers.