@@ -1,5 +1,11 @@
 2018-01-20  Bruno Haible  <bruno@clisp.org>
 
+	Avoid problem with shared libraries on Mac OS X.
+	* makemake.in (SHREXT): Define to '.dylib' on Mac OS X and to '.sl' on
+	HP-UX.
+
+2018-01-20  Bruno Haible  <bruno@clisp.org>
+
 	Enable most optimizations on NetBSD/sparc.
 	* Makefile.devel (multibuild-netbsd-sparc): Enable all build variants
 	that work.
